--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,15 +19,14 @@ jobs:
           node-version: '18'
 
       - name: Install dependencies
-        working-directory: vaishnavi-portfolio/vaishnavi-portfolio
+        working-directory: ./vaishnavi-portfolio
         run: npm install
 
       - name: Build React app
-        working-directory: vaishnavi-portfolio/vaishnavi-portfolio
+        working-directory: ./vaishnavi-portfolio
         run: npm run build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: vaishnavi-portfolio/vaishnavi-portfolio/build
